samples/_failures_safe/1761519399_eff212_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b68ee4c7.c: In function ‘main’:
./samples/SAFE/__tmp_b68ee4c7.c:156:5: error: expected expression at end of input
  156 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_b68ee4c7.c:156:5: error: expected declaration or statement at end of input
